// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> should render alert with type 1`] = `
<div
  class="tubulang-alert tubulang-alert-info"
>
  info
</div>
`;

exports[`<Alert /> should render alert with type 2`] = `
<div
  class="tubulang-alert tubulang-alert-warning"
>
  warning
</div>
`;

exports[`<Alert /> should render alert with type 3`] = `
<div
  class="tubulang-alert tubulang-alert-positive"
>
  positive
</div>
`;

exports[`<Alert /> should render alert with type 4`] = `
<div
  class="tubulang-alert tubulang-alert-negative"
>
  negative
</div>
`;

exports[`<Alert /> should render default 1`] = `
<div>
  <div
    class="tubulang-alert tubulang-alert-info"
  >
    default
  </div>
</div>
`;
